<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorLogger</string>
    <string name="action_settings">Settings</string>
	<string name="accel_label">Acceleration:</string>
	<string name="light_label">Light sensor:</string>
	<string name="gyro_label">Giroscope:</string>
	<string name="n_a">Not available</string>
	<string name="address">Server address</string>
	<string name="port_number">Port number</string>
	<string name="default_address">192.168.0.2</string>
	<string name="default_port">8888</string>
	<string name="connect_button">Connect</string>
</resources>
